# docs/swagger.json
@@ -29,7 +29,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "List users account by specified username format include id, username, encrypted password, etc.",
+                "description": "List users account by specified username format include id, username, role, etc. The password hash is never returned.",
                 "produces": [
                     "application/json"
                 ],
@@ -39,7 +39,7 @@
                 "summary": "List users account by specified username format.",
                 "responses": {
                     "200": {
-                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"totalCount\":1,\"userList\":[{\"id\":1,\"username\":\"admin\",\"ShortId\":\"5P9Ia4QnR\",\"password\":\"$2a$10$Fv9BWzqsiQ.JuuGdcXdvN.Fx3ml.dVR47W22GoJMWQAlm9wHQIMVe\",\"role\":\"admin\",\"createdAt\":\"2021-04-18 15:40:33\",\"updatedAt\":\"2021-04-18 15:40:33\"}]}}",
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"totalCount\":1,\"userList\":[{\"id\":1,\"username\":\"admin\",\"ShortId\":\"5P9Ia4QnR\",\"role\":\"admin\",\"createdAt\":\"2021-04-18 15:40:33\",\"updatedAt\":\"2021-04-18 15:40:33\"}]}}",
                         "schema": {
                             "$ref": "#/definitions/user.SwaggerListResponse"
                         }
@@ -65,6 +65,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "the ID of the specified user to update",
                         "name": "id",
                         "in": "path",
@@ -73,7 +74,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"username\":\"傅秀英\",\"password\":\"$2a$10$5pLrLpEQ1HAD2Hcm3Bnud.Shhmf5bTaf1yTWYloot0i5nvn1Td4hq\",\"role\":\"general\"}}",
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"UserID\":5,\"username\":\"傅秀英\",\"role\":\"general\"}}",
                         "schema": {
                             "$ref": "#/definitions/user.SwaggerGetResponse"
                         }
@@ -100,6 +101,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "the ID of the specified user to update",
                         "name": "id",
                         "in": "path",
@@ -144,6 +146,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "the ID of the specified user to delete",
                         "name": "id",
                         "in": "path",
@@ -306,9 +309,6 @@
                 "createdAt": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
-                },
                 "role": {
                     "type": "string"
                 },
@@ -337,9 +337,6 @@
                 "UserID": {
                     "type": "integer"
                 },
-                "password": {
-                    "type": "string"
-                },
                 "role": {
                     "type": "string"
                 },
@@ -362,11 +359,11 @@
         "user.LoginResponse": {
             "type": "object",
             "properties": {
-                "UserID": {
-                    "type": "integer"
-                },
                 "token": {
                     "type": "string"
+                },
+                "userID": {
+                    "type": "integer"
                 }
             }
         },
@@ -395,7 +392,10 @@
         "user.SelfDelResponse": {
             "type": "object",
             "properties": {
-                "UserID": {
+                "message": {
+                    "type": "string"
+                },
+                "userID": {
                     "type": "integer"
                 }
             }
