# handler/user/admin/list.go
@@ -11,10 +11,10 @@ import . "High-Performance-Online-Bookstore/handler"
 // List lists users account by specified username format.
 //
 // @Summary List users account by specified username format.
-// @Description List users account by specified username format include id, username, encrypted password, etc.
+// @Description List users account by specified username format include id, username, role, etc. The password hash is never returned.
 // @Tags user/admin
 // @Produce  json
-// @Success 200 {object} user.SwaggerListResponse "{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":1,"username":"admin","ShortId":"5P9Ia4QnR","password":"$2a$10$Fv9BWzqsiQ.JuuGdcXdvN.Fx3ml.dVR47W22GoJMWQAlm9wHQIMVe","role":"admin","createdAt":"2021-04-18 15:40:33","updatedAt":"2021-04-18 15:40:33"}]}}"
+// @Success 200 {object} user.SwaggerListResponse "{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":1,"username":"admin","ShortId":"5P9Ia4QnR","role":"admin","createdAt":"2021-04-18 15:40:33","updatedAt":"2021-04-18 15:40:33"}]}}"
 // @Router /user/admin [get]
 // @Security ApiKeyAuth
 func List(c *gin.Context) {
